<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/crema"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="461dp"
        app:srcCompat="@drawable/portales"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="2dp"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/verde"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="470dp"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/welcome_description"
        android:textAlignment="center"
        android:textColor="@color/verde"
        android:textSize="15sp"
        android:textStyle="italic"
        tools:layout_editor_absoluteX="45dp"
        tools:layout_editor_absoluteY="524dp"
        tools:ignore="MissingConstraints"
        />

    <Button
        android:id="@+id/btn_get_started"
        android:layout_width="219dp"
        android:layout_height="48dp"
        android:gravity="center"
        android:layout_marginTop="16dp"
        android:background="@drawable/round_button"
        android:text="@string/button_start"
        android:textColor="@color/white"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="577dp"
        tools:ignore="MissingConstraints"
        />


</androidx.constraintlayout.widget.ConstraintLayout>